DTSPB-2209 Integrate fortify scan with pipeline